--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <!-- 個人情報なので注意 -->
       <div class="profile">
         <h2 class="title">name</h2>
-        <h1 class="name">山田一郎</h1>
+        <h1 class="name">新井駿一</h1>
 
         <h2 class="title">history</h2>
         <ul class="history_list">
-          <li><div class="year">2000</div><div class="txt">〇〇県生まれ</div></li>
-          <li><div class="year">20XX</div><div class="txt">高校卒業</div></li>
-          <li><div class="year">20XX</div><div class="txt">文章が2行に渡る場合うまく収まるかをテストするために長い文章を書いてみるなど</div></li>
-          <li><div class="year">現在</div><div>在学中</div></li>
+          <li><div class="year">2003</div><div class="txt">滋賀県大津市生まれ</div></li>
+          <li><div class="year">2018</div><div class="txt">インスタグラムを始める</div></li>
+          <li><div class="year">2021</div><div class="txt">比叡山高校卒業</div></li>
+          <li><div class="year">現在</div><div>京都芸術大学　在学中</div></li>
         </ul>
 
         <h2 class="title">link</h2>
