--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <!-- 画像 -->
       <div id="card">
-        <img src="./images/card.jpg" alt="カード">
+        <img src="./images/IMG_7226.JPG" alt="カード">
       </div>
 
       <!-- 個人情報なので注意 -->
